--- a/cafe chaplin_upload/b0/common.css
+++ b/cafe chaplin_upload/b0/common.css
@@ -9,7 +9,7 @@ button, input, label { background-color: transparent; border: none; outline: non
 
 /*헤더 부분*/
 .wrap { width: 100%; overflow: hidden;}
-#hd { width: 100%; height: 150px; background-image: url("../date/image/top_color.png");}
+#hd { width: 100%; height: 150px; background-image: url("../date/image/top_color-min.png");}
 .tnb { width: 1300px; height: 50px; margin: 0 auto;}
 .tnb_lst { width: 200px; height: 50px; float: right;}
 .tnb_lst li { float: left; height: 18px; border-right: 1px solid #fff; padding-right: 15px; margin-top: 18px;}
