--- a/cafe chaplin_upload/b0/main.css
+++ b/cafe chaplin_upload/b0/main.css
@@ -66,7 +66,7 @@
 .img p { display: block; font-size: 40px; font-family: "munhwa"; line-height: 100px; margin-left: 100px; color: #08223d;}
 .search { width: 590px; height: 70px; border: 5px solid #08223d; border-radius: 20px;}
 .search_box { width: 500px; height: 70px; text-indent: 15px; font-size: 20px; background-color: transparent; border: none; position: relative;}
-.search_btn { width: 75px; height: 50px; background-color: transparent; border: none; overflow: hidden; text-indent: 9999px; background-image: url("../date/image/search_btn.png"); background-repeat: no-repeat; background-position: center; cursor: pointer; border-left: 4px solid #08223d; margin-left: 5px; background-size: 50px 50px;}
+.search_btn { width: 75px; height: 50px; background-color: transparent; border: none; overflow: hidden; text-indent: 9999px; background-image: url("../date/image/search_btn-min.png"); background-repeat: no-repeat; background-position: center; cursor: pointer; border-left: 4px solid #08223d; margin-left: 5px; background-size: 50px 50px;}
 .search_btn:hover { background-image: url(../date/image/search_btn_hover.png.jpg);}
 .community_box { clear: both; width: 590px; height: 400px; border: 5px solid #08223d; border-radius: 20px; position: relative;}
 .community_box img { width: 300px; height: 300px; margin-top: 41px; float: right;}
