--- a/b2/font.css
+++ b/b2/font.css
@@ -1,19 +1,10 @@
 @charset "utf-8";
 @font-face {
-    font-family:"gugi"; src:local("Gugi-Regular"), url("Gugi-Regular.ttf") format("truetype")
+    font-family:"gugi"; src:local("Gugi-Regular"), url("Gugi-Regular.ttf") format("truetype"), url("Gugi-Regular.eot") format("embedded-opentype")
+    ,url("Gugi-Regular.woff") format("woff")
 }
+
+
 @font-face {
-    font-family:"gugi"; src:local("Gugi-Regular"), url("Gugi-Regular.eot") format("embedded-opentype")
-}
-@font-face {
-    font-family:"gugi"; src:local("Gugi-Regular"), url("Gugi-Regular.woff") format("woff")
-}
-@font-face {
-    font-family:"note"; src:local("NotoSansKR-Regular"), url("/NotoSansKR-Regular.otf") format("opentype")
-}
-@font-face {
-    font-family:"note"; src:local("NotoSansKR-Regular"), url("NotoSansKR-Regular.eot") format("embedded-opentype")
-}
-@font-face {
-    font-family:"note"; src:local("NotoSansKR-Regular"), url("NotoSansKR-Regular.woff") format("woff")
+    font-family:"note"; src:local("NotoSansKR-Regular"), url("/NotoSansKR-Regular.otf") format("opentype"), url("NotoSansKR-Regular.eot") format("embedded-opentype"), url("NotoSansKR-Regular.woff") format("woff")
 }
