--- a/b1/main.css
+++ b/b1/main.css
@@ -23,7 +23,7 @@
         .page_wrap2 li:hover { border: 3px solid #141784;}
         .page_wrap2 .n_item1 a { display: block; width: 100%; height: 100%; background-image: url("./date/photo new1.jpg"); background-position: center;}
         .page_wrap2 .n_item2 a { display: block; width: 100%; height: 100%; background-image: url("./date/photo news2.Jpg"); background-position: center;}
-        .page_wrap2 .n_item3 a { display: block; width: 100%; height: 100%; background-image: url("./date/photo news4.jpg"); background-position: center;}
+        .page_wrap2 .n_item3 a { display: block; width: 100%; height: 100%; background-image: url("./date/photo news4.JPG"); background-position: center;}
         .page_wrap2 .n_item4 a { display: block; width: 100%; height: 100%; background-image: url("./date/photo news3.jpg"); background-position: center;}
         .page_wrap2 .col4 { width: 61%; background-color: #ddd; }
         .con_tit { color: #141784; font-size: 17px; text-decoration: underline;  line-height: 50px; text-indent: 20px; text-shadow: 2px 2px 3px #fff; }
